--- a/exercicios/ex023/tabelasgrandes01.html
+++ b/exercicios/ex023/tabelasgrandes01.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -28,12 +29,25 @@
             text-align: right;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: 0;
+            background-color: grey;
+        }
+
         caption {
             font-size: 1.5em;
             font-weight: bold;
             padding: 10px;
             background-color: lightgray;
         }
+
+        tbody > tr:nth-child(odd) {
+            background-color: lightgray;
+
+        }
+
+        
 
     </style>
 </head>
@@ -166,5 +180,18 @@
 
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quae ad in ullam id harum praesentium repellat alias nesciunt earum cumque laudantium ex ipsa quod, eaque saepe voluptatibus expedita sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel molestiae delectus velit reiciendis accusantium consectetur aut itaque at, voluptatem voluptates asperiores incidunt! Ex doloribus expedita animi reiciendis aperiam corporis perferendis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptate beatae, sint, debitis fugit iusto aspernatur similique esse autem maiores expedita? Facilis nam numquam voluptates laborum accusamus? Odio, porro tempora. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et dolorem assumenda ut modi excepturi cupiditate veritatis voluptatem rerum cumque harum dolorum nihil, voluptatibus voluptatum odit ducimus quisquam unde officiis laudantium.   </p>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quae ad in ullam id harum praesentium repellat alias nesciunt earum cumque laudantium ex ipsa quod, eaque saepe voluptatibus expedita sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel molestiae delectus velit reiciendis accusantium consectetur aut itaque at, voluptatem voluptates asperiores incidunt! Ex doloribus expedita animi reiciendis aperiam corporis perferendis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptate beatae, sint, debitis fugit iusto aspernatur similique esse autem maiores expedita? Facilis nam numquam voluptates laborum accusamus? Odio, porro tempora. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et dolorem assumenda ut modi excepturi cupiditate veritatis voluptatem rerum cumque harum dolorum nihil, voluptatibus voluptatum odit ducimus quisquam unde officiis laudantium.   </p>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quae ad in ullam id harum praesentium repellat alias nesciunt earum cumque laudantium ex ipsa quod, eaque saepe voluptatibus expedita sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel molestiae delectus velit reiciendis accusantium consectetur aut itaque at, voluptatem voluptates asperiores incidunt! Ex doloribus expedita animi reiciendis aperiam corporis perferendis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptate beatae, sint, debitis fugit iusto aspernatur similique esse autem maiores expedita? Facilis nam numquam voluptates laborum accusamus? Odio, porro tempora. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et dolorem assumenda ut modi excepturi cupiditate veritatis voluptatem rerum cumque harum dolorum nihil, voluptatibus voluptatum odit ducimus quisquam unde officiis laudantium.   </p>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quae ad in ullam id harum praesentium repellat alias nesciunt earum cumque laudantium ex ipsa quod, eaque saepe voluptatibus expedita sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel molestiae delectus velit reiciendis accusantium consectetur aut itaque at, voluptatem voluptates asperiores incidunt! Ex doloribus expedita animi reiciendis aperiam corporis perferendis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptate beatae, sint, debitis fugit iusto aspernatur similique esse autem maiores expedita? Facilis nam numquam voluptates laborum accusamus? Odio, porro tempora. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et dolorem assumenda ut modi excepturi cupiditate veritatis voluptatem rerum cumque harum dolorum nihil, voluptatibus voluptatum odit ducimus quisquam unde officiis laudantium.   </p>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quae ad in ullam id harum praesentium repellat alias nesciunt earum cumque laudantium ex ipsa quod, eaque saepe voluptatibus expedita sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel molestiae delectus velit reiciendis accusantium consectetur aut itaque at, voluptatem voluptates asperiores incidunt! Ex doloribus expedita animi reiciendis aperiam corporis perferendis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptate beatae, sint, debitis fugit iusto aspernatur similique esse autem maiores expedita? Facilis nam numquam voluptates laborum accusamus? Odio, porro tempora. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et dolorem assumenda ut modi excepturi cupiditate veritatis voluptatem rerum cumque harum dolorum nihil, voluptatibus voluptatum odit ducimus quisquam unde officiis laudantium.   </p>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quae ad in ullam id harum praesentium repellat alias nesciunt earum cumque laudantium ex ipsa quod, eaque saepe voluptatibus expedita sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel molestiae delectus velit reiciendis accusantium consectetur aut itaque at, voluptatem voluptates asperiores incidunt! Ex doloribus expedita animi reiciendis aperiam corporis perferendis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptate beatae, sint, debitis fugit iusto aspernatur similique esse autem maiores expedita? Facilis nam numquam voluptates laborum accusamus? Odio, porro tempora. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et dolorem assumenda ut modi excepturi cupiditate veritatis voluptatem rerum cumque harum dolorum nihil, voluptatibus voluptatum odit ducimus quisquam unde officiis laudantium.   </p>
+
+    
 </body>
 </html>
