--- a/exercicios/ex023/tabela04.html
+++ b/exercicios/ex023/tabela04.html
@@ -26,17 +26,19 @@
     <h1>Montando tabelas</h1>
 
     <table>
-        <caption></caption>
+        <caption>
+            Filmes Favoritos
+        </caption>
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td rowspan="3">Mulheres</td>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -55,7 +57,7 @@
                 <td>Big hero</td>
             </tr>
             <tr>
-                <td rowspan="3">Homens</td>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocaveis</td>
                 <td>Amnesia</td>
