--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -6,10 +6,34 @@
     <title>iframes</title>
 
     <style>
-        
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        iframe {
+            width: 95vw;
+            height: 400px;
+            border: 2px solid black;
+        }
+
     </style>
 </head>
 <body>
-    
+    <h1>Faça uma escolha</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, ipsa unde! Veniam optio aut doloribus tempore natus illo repudiandae error numquam nam dolor quas, tempora quaerat cumque autem voluptatum provident.</p>
+
+    <ul>
+        <li><a href="paginas-extras/pag001.html" target="frame">Primeira Pagina</a></li>
+        <li><a href="paginas-extras/pag002.html" target="frame">Segunda Pagina</a></li>
+        <li><a href="paginas-extras/pag003.html" target="frame">Terceira pagina</a></li>
+
+    </ul>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam doloribus mollitia blanditiis eos, perferendis dignissimos quo nisi laudantium repudiandae temporibus nihil, totam aspernatur libero doloremque vel non necessitatibus eius magnam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident assumenda distinctio laboriosam aperiam, ab ipsum, totam incidunt animi quibusdam, saepe architecto facere itaque vitae! Placeat rem eius labore. Iure, dolor!</p>
+
+    <iframe src="" name="frame" srcdoc="<h1> Escolha umas das opções acima </h1>">
+        <p>infelizmente seu navegador nao é compativel com esse conteudo.</p>
+    </iframe>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam eaque minima quibusdam doloribus id ipsam ea labore, provident maiores harum nostrum libero asperiores dolor cupiditate excepturi recusandae cum explicabo corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eius, aperiam distinctio aliquam iusto placeat aut deserunt deleniti necessitatibus nostrum, minima, perspiciatis debitis doloremque ut nihil fuga eligendi incidunt numquam?</p>
 </body>
 </html>
